--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
+*{
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  text-align: center;
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App-header {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: .75em;
+  background-color:  #34a5d9;
+  color: black;
+  padding: 50px;
+  margin-bottom: 100px;
+}
+
+.User-display{
+  height:50vh;
+  width:85%; ;
+  background-color:#ebebeb;
+  position: absolute;
+  top: 20vh;
+}
+.user-info-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.User-info{
+  position: absolute;
+  width: 60%;
+  height: 96%;
+  text-align: left;
+  margin-left:25px ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.User-name-displayed{
+  text-decoration: underline;
+  text-decoration-color:#34a5d9 ;
+  margin-bottom: 20px;
+}
+h2{
+  margin-bottom:5px;
+}
+ol{
+  font-weight: normal;
+}
+.id-counter{
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-weight: 900;
+  font-size: 25px;
+  margin: 20px;
+}
+.Selector-container{
+  width: 85%;
+}
+.button-container{
+  height: 5vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+button{
+  background-color: transparent;
+  border: none;
   color: white;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  color: gray
 }
